manifest/delete.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deletetask
spec:
  replicas: 1
  selector: 
    matchExpressions:
    - key: app
      operator: In
      values: 
      - deletetask
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template: 
    metadata:
      labels:
        app: deletetask
    spec:
      containers:
      - name: deletetask-con
        image: azureus3k/deletetask3005
        ports: 
        - containerPort: 8000
