manifest/add_service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: service-addtask
spec: 
  selector:
    app: addtask
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
