manifest/delete_service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: service-deletetask
spec: 
  selector:
    app: deletetask
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
