manifest/todo_service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: service-todoapp
spec: 
  selector:
    app: todoapp
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
